@@ -79,6 +79,7 @@
 - added: `U.request()` supports a new flag `proxy`, for example `proxy 127.0.0.1:8080`
 - added: NoSQL database a new event `change`, more in docs
 - added: `schema.define()(DEFAULT_VALUE)` added `DEFAULT_VALUE`
+- added: `TESTUSER([user])` for faking of `F.onAuthorize` delegate, targeted for unit-testing only
 
 - updated: (IMPORTANT) NoSQL binary divides files to independent directories for 1000 files per directory
 - updated: `GROUP()` by adding a new argument `url_prefix`
